# hue_music_sync

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  hue_visualizer.spec  hue_visualizer_macos.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-macos.yml  build-windows.yml
assets/: icon.icns
docs/: cemplex_audio_lightning_research.md  ilightshow_research.md
frontend/: index.html
scripts/: build_windows.bat  demo_effects.py  get_clientkey.py  list_lights.py  quick_start.py  setup_bridge.py  test_all_lights.py  test_audio.py  test_entertainment.py  test_lights.py
src/hue_visualizer/: __init__.py  __main__.py  desktop.py
src/hue_visualizer/audio/: __init__.py  analyzer.py  beat_detector.py  capture.py  section_detector.py
src/hue_visualizer/bridge/: README.md  __init__.py  connection.py  discovery.py  effects.py  entertainment_controller.py
src/hue_visualizer/core/: config.py  exceptions.py  persistence.py  updater.py
src/hue_visualizer/server/: __init__.py  app.py
src/hue_visualizer/utils/: color_conversion.py
tests/: test_analyzer.py  test_beat_detector.py  test_calibration_and_brightness.py  test_chase_and_positions.py  test_color_mapper.py  test_discovery.py  test_hybrid_engine.py  test_intensity_effects_groups.py  test_palette_generation_and_saturation.py  test_per_band_onsets.py  test_persistence.py  test_predictive_beat.py  test_presets.py  test_safety_quality.py  test_section_detector.py  test_spatial.py  test_spatial_effects_improvements.py  test_white_flash_and_triggers.py
(+5 files in other folders)
